<resources>
    <string name="app_name">Sportoo</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="welcome">"Welcome !"</string>

    <string name="action_sign_in">Sign in</string>
    <string name="register"><u>Register</u></string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="prompt_language">Language</string>
    <string name="prompt_first_name">First name</string>
    <string name="prompt_last_name">Last name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_birthdate">Birthdate</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_zip_code">Zip code</string>
    <string name="prompt_city">City</string>
    <string name="prompt_country">Country</string>

    <string-array name="language_array">
        <item>English</item>
        <item>French</item>
    </string-array>

    <string name="http_no_connection">No data : Check your internet connection</string>

    <!-- Errors -->
    <string name="technical_error">An unknown error happened : Try again</string>
    <string name="request_error">An error occurred during your request</string>


    <string name="customer_name">Name : %1$s</string>
</resources>