<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_padding"
    android:background="#DCE3E4"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/register_logo"
        android:layout_width="136dp"
        android:layout_height="136dp"
        android:src="@drawable/sportoo_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create an athlete account"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="26sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/register_logo"/>


    <ScrollView
        android:id="@+id/register_info_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:verticalScrollbarPosition="right"
        app:layout_constraintBottom_toTopOf="@id/sign_in"
        app:layout_constraintTop_toBottomOf="@id/register_title"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/register_language_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/register_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/prompt_first_name"
                android:hint="@string/prompt_first_name"
                android:inputType="text"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/register_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/prompt_last_name"
                android:hint="@string/prompt_last_name"
                android:inputType="text"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/prompt_email"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/prompt_password"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/register_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/prompt_confirm_password"
                android:hint="@string/prompt_confirm_password"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/register_birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/prompt_birthdate"
                android:hint="@string/prompt_birthdate"
                android:inputType="date"
                android:selectAllOnFocus="true" />

            <RadioGroup
                android:id="@+id/register_gender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/register_gender_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_gender"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/register_gender_man"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Man" />
                <RadioButton
                    android:id="@+id/register_gender_woman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Woman" />
                <RadioButton
                    android:id="@+id/register_gender_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Other" />

            </RadioGroup>

            <EditText
                android:id="@+id/register_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/prompt_address"
                android:hint="@string/prompt_address"
                android:inputType="textPostalAddress"
                android:selectAllOnFocus="true" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:id="@+id/register_zip_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/prompt_zip_code"
                    android:hint="@string/prompt_zip_code"
                    android:inputType="text"
                    android:selectAllOnFocus="true"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/register_city"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <EditText
                    android:id="@+id/register_city"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/prompt_city"
                    android:hint="@string/prompt_city"
                    android:inputType="text"
                    android:selectAllOnFocus="true"
                    app:layout_constraintLeft_toRightOf="@id/register_zip_code"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/register_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/prompt_country"
                android:hint="@string/prompt_country"
                android:inputType="text"
                android:selectAllOnFocus="true" />


        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:text="@string/register"
        app:layout_constraintBottom_toTopOf="@id/already_member"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_info_scroll" />
    <TextView
        android:id="@+id/already_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="I'm already a member"
        android:textAlignment="center"
        android:textColor="@color/link"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in"/>



</androidx.constraintlayout.widget.ConstraintLayout>